## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

c11_includedir = $(pkgincludedir)

c11_include_DATA = \
	ui/ui-management.h\
	client/client-management.h\
	config/config-management.h\
	draw/draw-global.h\
	c11-defines.h\
	c11-util.h

EXTRA_DIST = $(c11_include_DATA)
